# Agentic-Clinical-Belief-Stream-Governance

./: .env.example  .gitignore  DATA_ACCESS.md  README.md  algorithm_flows.tex  prompt_appendix.tex  pyproject.toml  requirements.txt  results_log.md
configs/: agentic_cbelief.yaml  experiment.yaml  paths.yaml  prompts.yaml  renal_rules.yaml
scripts/: 00_validate_cleaned_data.py  01_inspect_sample_schema.py  02_inspect_adapted_samples.py  05_run_agentic_cbelief.py  06_evaluate_agentic_cbelief_extended.py  07_run_direct_llm_baselines.py  08_run_local_ehr_pilot_experiment.py  09_run_local_ehr_pilot_four_models.py  adapt_local_ehr_pilot_to_eval.py  dedupe_direct_llm_jsonl.py  make_jsonl_shards.py
src/cbelief/: cli.py
src/cbelief/adapters/: adapt_v2_1_samples.py
src/cbelief/agents/: __init__.py  agent_prompts.py  agent_schemas.py  agentic_cbelief.py  json_utils.py  llm_client.py  temporal_skill_verifier.py
src/cbelief/baselines/: full_context_leaky_rule.py  full_context_llm.py  full_context_with_provenance_rule.py  rule_based.py  visible_only_llm.py  visible_only_rule.py
src/cbelief/eval/: calibration.py  claim_metrics.py  dca.py  error_analysis_key_subgroups.py  error_analysis_v0_1.py  evaluate_v0.py  evidence_metrics.py  make_paper_tables.py  subgroup_analysis.py  subgroup_analysis_llm.py  subgroup_analysis_v2.py  summarize_llm_metrics.py  summarize_metrics.py  temporal_metrics.py
src/cbelief/io/: config.py  load_data.py
src/cbelief/llm/: apply_cbelief_skill.py  export_leakage_cases.py  generate_llm_prompts.py  prompts.py  (+5 more)
tests/: test_agentic_cbelief.py
(+19 files in other folders)
