[project]
name = "cbelief-stream"
version = "0.1.0"
description = "A general framework for temporally grounded clinical evidence attribution and belief updating"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "tqdm>=4.66",
  "typer>=0.9",
  "rich>=13.0",
  "requests>=2.31",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8",
  "openpyxl>=3.1",
]
local-llm = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.28",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cbelief = "cbelief.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
